ACTIN-74: New line between trial ID and acronym